Fixed address icon in footer is too small

--- a/modules/Layout/Boilerplate/Boilerplate.module.scss
+++ b/modules/Layout/Boilerplate/Boilerplate.module.scss
@@ -58,6 +58,8 @@
 
     .icon {
         margin-right: $spacing-1;
+        min-width: $spacing-3;
+        min-height: $spacing-3;
     }
 }
 
